## Version 1.2.2

Added `PartialData` argument to `SurvExpand`. The argument allows the user to
determine whether or not to only keep the expanded data needed to find the Cox
partial likelihood.

## Version 1.2.1

Minor documentation improvements.

## Version 1.2

!!!! `smoother` argument for `simGG` is deprecated. Use `method` instead.
The functionality is exactly the same. !!!!

`tvc` now accepts a vector of variable names.

jss-example demo added.

simPH-overview vignette added.

`extremesDrop` argument added to `coxsim` functions. This drops simulated
quantity of interest values that are Inf/NA/NaN/>1000000. These can create
problems with plotting and finding the `spin`.

Small utility `setXl` created that makes it easier to set `Xl` values.

Automatic `bspline` cleaning features added for `coxsimSpline`.

Minor documentation improvements.

Internal code cleaning.

## Version 1.1.1

`coxsimPoly` is able to simulate quantities of interest for only the polynomial
terms without the linear component. Feature request from Mattia Valente.

Minor error message improvements.

## Version 1.1

Added `SurvExpand` for converting a data frame of non-equal interval continuous
observations into equal interval continuous observations. This is very useful if
you intend to create time interactions. Thanks to Mintao Nie and an anonymous
reviewer for the suggestion.

Roxyegen documentation improvements.

## Version 1.0

Added `type` argument to `simGG.spline`. Allows the user to plot using `points`,
`ribbons`, or `lines`. NOTE: the `ribbons` standalone argument is depricated.

Added `SmoothSpline` argument to `simGG.simspline` to use smoothing splines on
the simulations. Creates a smoother graph.

Uses `mvrnorm` from the `MASS` package instead of `rmultnorm` to draw the
simulations.

Documentation and other internal improvements.

## Version 0.8.6

Documentation improvements.

## Version 0.8.5
